Fix sidebar spacing issues

--- a/sphinxext/zbtheme/css/components.css
+++ b/sphinxext/zbtheme/css/components.css
@@ -34,10 +34,6 @@
 }
 
 .toctree {
-  .toctree-l1 {
-    font-size: var(--text-base);
-    line-height: var(--leading-base);
-  }
   .toctree-l2 {
     font-size: var(--text-sm);
     line-height: var(--leading-sm);
@@ -57,8 +53,13 @@
         border-style: solid;
       }
     }
+    code, tt {
+      font-weight: var(--font-weight-bold);
+    }
   }
   p {
+    font-size: var(--text-sm);
+    line-height: var(--leading-sm);
     color: #555;
     margin-block: calc(var(--spacing) * 2);
   }
