--- a/sphinxext/zbtheme/static/zb.css
+++ b/sphinxext/zbtheme/static/zb.css
@@ -427,10 +427,6 @@
 		}
 	}
 	.toctree {
-		.toctree-l1 {
-			font-size: var(--text-base);
-			line-height: var(--leading-base);
-		}
 		.toctree-l2 {
 			font-size: var(--text-sm);
 			line-height: var(--leading-sm);
@@ -449,8 +445,13 @@
 					border-style: solid;
 				}
 			}
+			code, tt {
+				font-weight: var(--font-weight-bold);
+			}
 		}
 		p {
+			font-size: var(--text-sm);
+			line-height: var(--leading-sm);
 			color: #555;
 			margin-block: calc(var(--spacing) * 2);
 		}
@@ -475,9 +476,6 @@
 	.p-2 {
 		padding: calc(var(--spacing) * 2);
 	}
-	.px-2 {
-		padding-inline: calc(var(--spacing) * 2);
-	}
 	.px-4 {
 		padding-inline: calc(var(--spacing) * 4);
 	}
@@ -486,9 +484,6 @@
 	}
 	.py-2 {
 		padding-block: calc(var(--spacing) * 2);
-	}
-	.py-4 {
-		padding-block: calc(var(--spacing) * 4);
 	}
 	.ps-2 {
 		padding-inline-start: calc(var(--spacing) * 2);
@@ -570,9 +565,6 @@
 	}
 	.underline {
 		text-decoration-line: underline;
-	}
-	.box-border {
-		box-sizing: border-box;
 	}
 	.w-\[940px\] {
 		width: 940px;
